# defensive-security-agent

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  beginner-guide.md  java-rest-verification.md  qa-ui-guide.md  sam-rest-command-injection-test-cases.md  scanner-tools.md  siebel-security-focus.md
examples/insecure_service/: app.py
examples/insecure_siebel_cpp/: BusinessService.cpp
examples/insecure_siebel_java/: IntegrationHandler.java
examples/java_rest_verification/: RestController.java
examples/probe_specs/: http-probe-template.json
scripts/: sam_rest_command_injection_pocs.py
src/dsa/: __init__.py  artifacts.py  cli.py  external_scanners.py  findings.py  java_rest_verifier.py  report.py  rules.py  scanner.py  siebel_sam_rest_pocs.py  triage_report.py  ui.py  validation.py  validation_report.py
tests/: test_external_scanners.py  test_java_rest_verifier.py  test_sam_rest_pocs.py  test_scanner.py  test_ui.py  test_validation.py
