[project]
name = "defensive-security-agent"
version = "0.1.0"
description = "A defensive code-security agent scaffold for internal repositories."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
dsa = "dsa.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

